Removed mention about test scope

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h3>
 <a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h3>
 
-<p>You can include this project in your own by adding the following dependency to your project's <code>pom.xml</code> file under the <a href="https://maven.apache.org/guides/introduction/introduction-to-dependency-mechanism.html#Dependency_Scope">test scope</a>:</p>
+<p>You can include this project in your own by adding the following dependency to your project's <code>pom.xml</code> file:</p>
 
 <pre><code>&lt;dependency&gt;
   &lt;groupId&gt;com.mediamiser&lt;/groupId&gt;
